Added JSON parser; Fixed cross origin ajax issue

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
   <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.1.min.js"><\/script>')</script>
 
   <!-- scripts concatenated and minified via build script -->
+  <script src="js/libs/json2.js"></script>
   <script src="js/libs/underscore.js"></script>
   <script src="js/libs/backbone.js"></script>
   <script src="js/libs/mustache.js"></script>
