got 'all documents' view working (although in the same div as the indexes and it doesn't clear out the contents)

--- a/index.html
+++ b/index.html
@@ -138,6 +138,14 @@
 	{{/definition}}
 </script>
 
+
+<script id="documentSummaryTemplate" type="text/html">
+	{{#@metadata}}
+	<p>Id: {{@id}}</p>
+	<p>Type: {{Raven-Entity-Name}}</p>
+	{{/@metadata}}
+</script>
+
   <!-- Asynchronous Google Analytics snippet. Change UA-XXXXX-X to be your site's ID.
        mathiasbynens.be/notes/async-analytics-snippet -->
   <!--<script>
