added a 'edit' event to document - not showing the actual document content yet (need to implement a toJSON or equivalent function for object body and metadata)

--- a/index.html
+++ b/index.html
@@ -149,6 +149,16 @@
 	{{/@metadata}}
 </script>
 
+<script id="documentEditTemplate" type="text/html">
+	<form action="#">
+		<textarea rows="10" columns="4" name="document">{{object}}</textarea>
+		<br />
+		<button class="save">Save</button>
+		<button class="cancel">Cancel</button>
+	</form>
+	
+	
+</script>
   <!-- Asynchronous Google Analytics snippet. Change UA-XXXXX-X to be your site's ID.
        mathiasbynens.be/notes/async-analytics-snippet -->
   <!--<script>
