added id to edit

--- a/index.html
+++ b/index.html
@@ -150,6 +150,9 @@
 </script>
 
 <script id="documentEditTemplate" type="text/html">
+	{{#metadata}}
+	<h3>{{& @id}}</h3>
+	{{/metadata}}
 	<form action="#">
 		<textarea rows="10" columns="4" name="document">{{object}}</textarea>
 		<br />
